--- a/CALC.css
+++ b/CALC.css
@@ -26,7 +26,7 @@ table {
   text-align: right;
 }
 
-.numBtn, .oneNine, .operator, #zero, #wZero #point {
+.oneNine, .operator, #zero, #wZero #point {
   width: 60px;
   height: 50px;
   margin: 1px auto;
